# axum

./: .gitignore  Cargo.toml  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/app/: OrderForm.js  TradeChart.js  globals.css  page.js
src/: main.rs  server.rs
src/server/products/: handlers.rs  usecases.rs
